<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_karto</name>
  <version>1.2.0</version>
  <description>Colconized ROS 2 packaging of the OpenKarto library</description>

  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
